--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@
                             </div>
                         </div>
                         <div class="container">
-                            <div class="mil-illustration-slider-nav mil-up">
-                                <div class="mil-nav-buttons">
+                            <div class="mil-up">
+                                <div class="mil-nav-buttons justify-content-end">
                                     <div class="mil-slider-button mil-illustration-prev">Prev</div>
                                     <div class="mil-slider-button mil-illustration-next">Next</div>
                                 </div>
