--- a/services.html
+++ b/services.html
@@ -108,9 +108,11 @@
 
 
                     <div class="row">
-                        <div class="col-lg-12">
-
-                            <div class="div mil-mb-60">
+                        <div class="col-lg-6 service">
+                            <div class="div mil-mb-15">
+                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                            </div>
+                            <div class="div mil-mb-60 ">
                                 <h3 class="mil-upper mil-up mil-mb-30">Exhibit Trade Show Booth Design
                                 </h3>
 
@@ -125,8 +127,10 @@
                             </div>
 
                         </div>
-                        <div class="col-lg-6">
-
+                        <div class="col-lg-6 service" >
+                            <div class="div mil-mb-15">
+                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                            </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Branding</h3>
                                 <div class="mil-divider-sm mil-up mil-mb-30"></div>
@@ -141,8 +145,10 @@
                             </div>
 
                         </div>
-                        <div class="col-lg-6">
-
+                        <div class="col-lg-6 service">
+                            <div class="div mil-mb-15">
+                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                            </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Virtual Solutions</h3>
                                 <div class="mil-divider-sm mil-up mil-mb-30"></div>
@@ -157,8 +163,10 @@
                             </div>
 
                         </div>
-                        <div class="col-lg-6">
-
+                        <div class="col-lg-6 service">
+                            <div class="div mil-mb-15">
+                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                            </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Physical Engagement Media
                                 </h3>
@@ -175,8 +183,10 @@
                             </div>
 
                         </div>
-                        <div class="col-lg-6">
-
+                        <div class="col-lg-6 service">
+                            <div class="div mil-mb-15">
+                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                            </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Advertising Material Design
                                 </h3>
@@ -193,8 +203,10 @@
                             </div>
 
                         </div>
-                        <div class="col-lg-6">
-
+                        <div class="col-lg-6 service">
+                            <div class="div mil-mb-15">
+                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                            </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Sponsored Ads
                                 </h3>
@@ -210,8 +222,10 @@
                             </div>
 
                         </div>
-                        <div class="col-lg-6">
-
+                        <div class="col-lg-6 service">
+                            <div class="div mil-mb-15">
+                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                            </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Content Creation
                                 </h3>
@@ -228,8 +242,10 @@
                             </div>
 
                         </div>
-                        <div class="col-lg-6">
-
+                        <div class="col-lg-6 service">
+                            <div class="div mil-mb-15">
+                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                            </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Digital Marketing
 
@@ -248,8 +264,10 @@
                             </div>
 
                         </div>
-                        <div class="col-lg-6">
-
+                        <div class="col-lg-6 service">
+                            <div class="div mil-mb-15">
+                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                            </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Video Production
 
@@ -270,8 +288,10 @@
                             </div>
 
                         </div>
-                        <div class="col-lg-12">
-
+                        <div class="col-lg-6 service">
+                            <div class="div mil-mb-15">
+                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                            </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Animation and Event Display Media
 
