--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div></div>
                     <div></div>
                 </div>
-                <img src="img/covers/1.png" class="mil-bg-img mil-scale" data-value-1=".4" data-value-2="1.4" alt="image">
+                <img src="img/home/home.webp" class="mil-bg-img mil-scale" data-value-1=".4" data-value-2="1.4" alt="image">
                 <div class="mil-overlay"></div>
                 <div class="container">
                     <div class="mil-background-grid mil-top-space"></div>
@@ -129,7 +129,7 @@
 
                             <div class="mil-illustration mil-up mil-mb-90">
                                 <div class="mil-image-frame">
-                                    <img src="img/covers/2.png" alt="image" class="mil-scale" data-value-1="1" data-value-2="1.3">
+                                    <img src="img/home/about.webp" alt="image" class="mil-scale" data-value-1="1" data-value-2="1.3">
                                 </div>
                                 <div class="mil-about-counter">
                                     <h1 class="mil-counter mil-right mil-mb-10" data-number="23">0</h1>
@@ -631,7 +631,7 @@
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <a href="auntie-annes.html" class="mil-portfolio-item mil-square-item mil-up mil-mb-30">
-                                <img src="img/portfolio/project1.jpg" alt="cover">
+                                <img src="img/home/auntie.webp" alt="cover">
                                 <div class="mil-project-descr">
                                     <h4 class="mil-upper mil-mb-20">Auntie Annes</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
@@ -642,7 +642,7 @@
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <a href="food-complex.html" class="mil-portfolio-item mil-square-item mil-up mil-mb-30">
-                                <img src="img/portfolio/project2.jpg" alt="cover">
+                                <img src="img/home/food-complex.webp" alt="cover">
                                 <div class="mil-project-descr">
                                     <h4 class="mil-upper mil-mb-20">Food Complex</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
@@ -654,7 +654,7 @@
                         
                         <div class="col-md-6 col-lg-3">
                             <a href="moon-cafe.html" class="mil-portfolio-item mil-square-item mil-up mil-mb-30">
-                                <img src="img/portfolio/project3.jpg" alt="cover">
+                                <img src="img/home/moon-cafe.webp" alt="cover">
                                 <div class="mil-project-descr">
                                     <h4 class="mil-upper mil-mb-20">Moon Cafe</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
@@ -761,7 +761,7 @@
             </section>
             <!-- call to action end -->
             <section class="mil-dark-bg mil-relative mil-o-hidden">
-                <img src="img/photo/3.jpg" class="mil-bg-img mil-scale" alt="image" style="object-position: center;" data-value-1="1" data-value-2="1.2">
+                <img src="img/home/faq.webp" class="mil-bg-img mil-scale" alt="image" style="object-position: center;" data-value-1="1" data-value-2="1.2">
                 <div class="mil-overlay"></div>
                 <div class="container mil-p-120-90">
                     <div class="mil-background-grid"></div>
@@ -885,7 +885,7 @@
 
             <!-- footer -->
             <footer class="mil-relative">
-                <img src="img/covers/3.png" class="mil-bg-img mil-parallax" alt="image" style="object-position: bottom;" data-value-1="-25%" data-value-2="23%">
+                <img src="img/home/footer.webp" class="mil-bg-img mil-parallax" alt="image" style="object-position: bottom;" data-value-1="-25%" data-value-2="23%">
                 
                 <div class="mil-overlay"></div>
                 <div class="container mil-p-120-120">
