--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
     
                                 <div class="mil-illustration mil-up mil-mb-90">
                                     <div class="mil-image-frame">
-                                        <img src="img/covers/8.png" alt="image" class="mil-scale" data-value-1="1" data-value-2="1.3">
+                                        <img src="img/about/1000x1000..webp" alt="image" class="mil-scale" data-value-1="1" data-value-2="1.3">
                                     </div>
                                     <div class="mil-about-counter">
                                         <h1 class="mil-counter mil-right mil-mb-10" data-number="23">0</h1>
