--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                         </div>
                         <div class="col-md-6 col-lg-3">
                             <a href="auntie-annes.html" class="mil-portfolio-item mil-square-item mil-up mil-mb-30">
-                                <img src="img/home/auntie.webp" alt="cover">
+                                <img src="img/covers/auntie.webp" alt="cover">
                                 <div class="mil-project-descr">
                                     <h4 class="mil-upper mil-mb-20">Auntie Annes</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
@@ -641,10 +641,10 @@
 
                         </div>
                         <div class="col-md-6 col-lg-3">
-                            <a href="food-complex.html" class="mil-portfolio-item mil-square-item mil-up mil-mb-30">
-                                <img src="img/home/food-complex.webp" alt="cover">
+                            <a href="pzone.html" class="mil-portfolio-item mil-square-item mil-up mil-mb-30">
+                                <img src="img/covers/pzone.webp" alt="cover">
                                 <div class="mil-project-descr">
-                                    <h4 class="mil-upper mil-mb-20">Food Complex</h4>
+                                    <h4 class="mil-upper mil-mb-20">Pzone</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
                                 </div>
                             </a>
@@ -654,7 +654,7 @@
                         
                         <div class="col-md-6 col-lg-3">
                             <a href="moon-cafe.html" class="mil-portfolio-item mil-square-item mil-up mil-mb-30">
-                                <img src="img/home/moon-cafe.webp" alt="cover">
+                                <img src="img/covers/moon-cafe.webp" alt="cover">
                                 <div class="mil-project-descr">
                                     <h4 class="mil-upper mil-mb-20">Moon Cafe</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
