--- a/auntie-annes.html
+++ b/auntie-annes.html
@@ -97,27 +97,27 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
 
-                            <div class="mil-illustration mil-fw-item" data-swiper-parallax-x="50" data-swiper-parallax-scale="1.3">
+                            <div class="mil-illustration mil-fw-item" data-swiper-parallax-x="50" data-swiper-parallax-scale="1">
                                 <div class="mil-image-frame">
-                                    <img src="img/portfolio/projects/Ante Anes/auntie anne_s_02.jpg" alt="image" >
+                                    <img src="img/portfolio/Portolio/Auntie1.webp" alt="image" >
                                 </div>
                             </div>
 
                         </div>
                         <div class="swiper-slide">
 
-                            <div class="mil-illustration mil-fw-item" data-swiper-parallax-x="50" data-swiper-parallax-scale="1.3">
+                            <div class="mil-illustration mil-fw-item" data-swiper-parallax-x="50" data-swiper-parallax-scale="1">
                                 <div class="mil-image-frame">
-                                    <img src="img/portfolio/projects/Ante Anes/auntie anne_s_022.jpg" alt="image">
+                                    <img src="img/portfolio/Portolio/Auntie2.webp" alt="image">
                                 </div>
                             </div>
 
                         </div>
                         <div class="swiper-slide">
 
-                            <div class="mil-illustration mil-fw-item" data-swiper-parallax-x="50" data-swiper-parallax-scale="1.3">
+                            <div class="mil-illustration mil-fw-item" data-swiper-parallax-x="50" data-swiper-parallax-scale="1">
                                 <div class="mil-image-frame">
-                                    <img src="img/portfolio/projects/Ante Anes/auntie anne_s_04.jpg" alt="image">
+                                    <img src="img/portfolio/Portolio/Auntie3.webp" alt="image">
                                 </div>
                             </div>
 
