--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
 
             <!-- banner -->
             <section class="mil-banner mil-banner-sm">
-                <img src="img/covers/5.png" class="mil-bg-img mil-scale" data-value-1=".4" data-value-2="1.4" alt="image" style="object-position: top">
+                <img src="img/covers/Services.webp" class="mil-bg-img mil-scale" data-value-1=".4" data-value-2="1.4" alt="image" style="object-position: top">
                 <div class="mil-overlay"></div>
                 <div class="container">
                     <div class="mil-background-grid mil-top-space"></div>
@@ -110,7 +110,7 @@
                     <div class="row">
                         <div class="col-lg-6 service">
                             <div class="div mil-mb-15">
-                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                                <img src="img/Services/Exhibit Trade Show Booth Design.webp" class="mil-img" alt="">
                             </div>
                             <div class="div mil-mb-60 ">
                                 <h3 class="mil-upper mil-up mil-mb-30">Exhibit Trade Show Booth Design
@@ -129,7 +129,7 @@
                         </div>
                         <div class="col-lg-6 service" >
                             <div class="div mil-mb-15">
-                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                                <img src="img/Services/Branding.webp" class="mil-img" alt="">
                             </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Branding</h3>
@@ -147,7 +147,7 @@
                         </div>
                         <div class="col-lg-6 service">
                             <div class="div mil-mb-15">
-                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                                <img src="img/Services/Virtual Solutions.webp" class="mil-img" alt="">
                             </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Virtual Solutions</h3>
@@ -165,7 +165,7 @@
                         </div>
                         <div class="col-lg-6 service">
                             <div class="div mil-mb-15">
-                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                                <img src="img/Services/Physical Engagement Media.webp" class="mil-img" alt="">
                             </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Physical Engagement Media
@@ -185,7 +185,7 @@
                         </div>
                         <div class="col-lg-6 service">
                             <div class="div mil-mb-15">
-                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                                <img src="img/Services/Advertising Material Design.webp" class="mil-img" alt="">
                             </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Advertising Material Design
@@ -205,7 +205,7 @@
                         </div>
                         <div class="col-lg-6 service">
                             <div class="div mil-mb-15">
-                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                                <img src="img/Services/Sponsored Ads.webp" class="mil-img" alt="">
                             </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Sponsored Ads
@@ -224,7 +224,7 @@
                         </div>
                         <div class="col-lg-6 service">
                             <div class="div mil-mb-15">
-                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                                <img src="img/Services/Content Creation.webp" class="mil-img" alt="">
                             </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Content Creation
@@ -244,7 +244,7 @@
                         </div>
                         <div class="col-lg-6 service">
                             <div class="div mil-mb-15">
-                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                                <img src="img/Services/Digital Marketing.webp" class="mil-img" alt="">
                             </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Digital Marketing
@@ -266,7 +266,7 @@
                         </div>
                         <div class="col-lg-6 service">
                             <div class="div mil-mb-15">
-                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                                <img src="img/Services/Video Production.webp" class="mil-img" alt="">
                             </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Video Production
@@ -290,7 +290,7 @@
                         </div>
                         <div class="col-lg-6 service">
                             <div class="div mil-mb-15">
-                                <img src="img/covers/service.jpg" class="mil-img" alt="">
+                                <img src="img/Services/Animation and Event Display Media.webp" class="mil-img" alt="">
                             </div>
                             <div class="div mil-mb-60">
                                 <h3 class="mil-upper mil-up mil-mb-30">Animation and Event Display Media
