--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
 
             <!-- banner -->
             <section class="mil-banner mil-banner-sm">
-                <img src="img/covers/Services.webp" class="mil-bg-img mil-scale" data-value-1=".4" data-value-2="1.4" alt="image" style="object-position: top">
+                <img src="img/covers/Services.webp" class="mil-bg-img mil-scale" data-value-1="1" data-value-2="1" alt="image" style="object-position: top">
                 <div class="mil-overlay"></div>
                 <div class="container">
                     <div class="mil-background-grid mil-top-space"></div>
