--- a/services.html
+++ b/services.html
@@ -336,7 +336,7 @@
 
             <!-- footer -->
             <footer class="mil-relative">
-                <img src="img/covers/3.png" class="mil-bg-img mil-parallax" alt="image" style="object-position: bottom;" data-value-1="-25%" data-value-2="23%">
+                <img src="img/footer.webp" class="mil-bg-img mil-parallax" alt="image" style="object-position: bottom;" data-value-1="-25%" data-value-2="23%">
                 
                 <div class="mil-overlay"></div>
                 <div class="container mil-p-120-90">
