--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 
             <!-- banner -->
             <section class="mil-banner mil-banner-sm">
-                <img src="img/covers/3.png" class="mil-bg-img mil-scale" data-value-1=".4" data-value-2="1.4" alt="image" style="object-position: top">
+                <img src="img/contact us/cover.webp" class="mil-bg-img mil-scale" data-value-1=".4" data-value-2="1.4" alt="image" style="object-position: top">
                 <div class="mil-overlay"></div>
                 <div class="container">
                     <div class="mil-background-grid mil-top-space"></div>
@@ -193,7 +193,7 @@
 
             <!-- footer -->
             <footer class="mil-relative">
-                <img src="img/covers/3.png" class="mil-bg-img mil-parallax" alt="image" style="object-position: bottom;" data-value-1="-25%" data-value-2="23%">
+                <img src="img/footer.webp" class="mil-bg-img mil-parallax" alt="image" style="object-position: bottom;" data-value-1="-25%" data-value-2="23%">
                 
                 <div class="mil-overlay"></div>
                 <div class="container mil-p-120-120">
