--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
 
             <!-- footer -->
             <footer class="mil-relative">
-                <img src="img/home/footer.webp" class="mil-bg-img mil-parallax" alt="image" style="object-position: bottom;" data-value-1="-25%" data-value-2="23%">
+                <img src="img/footer.webp" class="mil-bg-img mil-parallax" alt="image" style="object-position: bottom;" data-value-1="-25%" data-value-2="23%">
                 
                 <div class="mil-overlay"></div>
                 <div class="container mil-p-120-120">
