--- a/portfolio.html
+++ b/portfolio.html
@@ -153,8 +153,7 @@
             </section>
            <!-- footer -->
            <footer class="mil-relative">
-            <img src="img/covers/3.png" class="mil-bg-img mil-parallax" alt="image" style="object-position: bottom;" data-value-1="-25%" data-value-2="23%">
-            
+            <img src="img/footer.webp" class="mil-bg-img mil-parallax" alt="image" style="object-position: bottom;" data-value-1="-25%" data-value-2="23%">            
             <div class="mil-overlay"></div>
             <div class="container mil-p-120-120">
                 <div class="mil-background-grid"></div>
