--- a/pzone.html
+++ b/pzone.html
@@ -85,7 +85,7 @@
                     <div class="mil-background-grid mil-top-space"></div>
                     <div class="mil-banner-content">
                         <div class="mil-mb-90">
-                            <h1 class="mil-light mil-upper mil-up mil-mb-30"><span class="mil-accent">Food Complex</span></h1>
+                            <h1 class="mil-light mil-upper mil-up mil-mb-30"><span class="mil-accent">PZone</span></h1>
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
 
            <!-- footer -->
            <footer class="mil-relative">
-            <img src="img/covers/3.png" class="mil-bg-img mil-parallax" alt="image" style="object-position: bottom;" data-value-1="-25%" data-value-2="23%">
+            <img src="img/footer.webp" class="mil-bg-img mil-parallax" alt="image" style="object-position: bottom;" data-value-1="-25%" data-value-2="23%">
             
             <div class="mil-overlay"></div>
 
