--- a/pzone.html
+++ b/pzone.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/icons/CMS 50px .png">
     <!-- page name -->
 
-    <title>Food Complex</title>
+    <title>PZone</title>
 
 </head>
 
