--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,7 @@
                         </div>
                         
                         <div class="col-md-6 col-lg-3">
-                            <a href="project.html" class="mil-portfolio-item mil-square-item mil-up mil-mb-30">
+                            <a href="moon-cafe.html" class="mil-portfolio-item mil-square-item mil-up mil-mb-30">
                                 <img src="img/covers/moon-cafe.webp" alt="cover">
                                 <div class="mil-project-descr">
                                     <h4 class="mil-upper mil-mb-20">Moon Cafe</h4>
