--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
                                                 <div class="mil-card-number">01.</div>
                                                 <div class="mil-center">
                                                     <div class="mil-icon mil-icon-xl mil-mb-30">
-                                                        <img src="img/icons/OUTSOURCE DRAFTING.png" alt="icon">
+                                                        <!-- <img src="img/icons/OUTSOURCE DRAFTING.png" alt="icon"> -->
+                                                        
                                                     </div>
                                                     <h4 class="mil-upper mil-mb-20">Exhibit Trade Show Booth Design</h4>
                                                     <div class="mil-divider-sm mil-mb-20"></div>
