--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                                                 <div class="mil-card-number">01.</div>
                                                 <div class="mil-center">
                                                     <div class="mil-icon mil-icon-xl mil-mb-30">
-                                                        <!-- <img src="img/icons/OUTSOURCE DRAFTING.png" alt="icon"> -->
-                                                        
+                                                        <img src="img/icons/OUTSOURCE DRAFTING.png" alt="icon">
+
                                                     </div>
                                                     <h4 class="mil-upper mil-mb-20">Exhibit Trade Show Booth Design</h4>
                                                     <div class="mil-divider-sm mil-mb-20"></div>
@@ -754,11 +754,11 @@
 
 
             <!-- call to action -->
-            <section class="mil-dark-bg mil-relative mil-o-hidden">
+            <!-- <section class="mil-dark-bg mil-relative mil-o-hidden">
                 <img src="img/covers/3.png" class="mil-bg-img mil-parallax" alt="image" style="object-position: center;" data-value-1="1" data-value-2="1.2">
                 <div class="mil-overlay"></div>
                 
-            </section>
+            </section> -->
             <!-- call to action end -->
             <section class="mil-dark-bg mil-relative mil-o-hidden">
                 <img src="img/home/faq.webp" class="mil-bg-img mil-scale" alt="image" style="object-position: center;" data-value-1="1" data-value-2="1.2">
