--- a/moon-cafe.html
+++ b/moon-cafe.html
@@ -34,7 +34,7 @@
         </div>
 
         <!-- top bar -->
-        <div class="mil-top-panel">
+        <div class="mil-top-panel relative">
             <div class="container-fluid">
                 <div class="mil-top-panel-content">
                     <a href="index.html" class="mil-logo">
@@ -80,7 +80,7 @@
         <div id="content">
 
             <!-- banner -->
-            <section class="mil-banner mil-banner-sm">
+            <!-- <section class="mil-banner mil-banner-sm">
                 <img src="img/portfolio/project3.jpg" class="mil-bg-img mil-scale" data-value-1=".4" data-value-2="1.4" alt="image" style="object-position: center top">
                 <div class="mil-overlay"></div>
                 <div class="container">
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- portfolio -->
             <div class="mil-illustration-slider-frame mil-up">
