--- a/pzone.html
+++ b/pzone.html
@@ -33,7 +33,7 @@
         </div>
 
         <!-- top bar -->
-        <div class="mil-top-panel">
+        <div class="mil-top-panel relative">
             <div class="container-fluid">
                 <div class="mil-top-panel-content">
                     <a href="index.html" class="mil-logo">
@@ -77,20 +77,6 @@
 
         <!-- content -->
         <div id="content">
-
-            <!-- banner -->
-            <section class="mil-banner mil-banner-sm">
-                <img src="img/portfolio/project2.jpg" class="mil-bg-img mil-scale" data-value-1=".4" data-value-2="1.4" alt="image" style="object-position: top">
-                <div class="mil-overlay"></div>
-                <div class="container">
-                    <div class="mil-background-grid mil-top-space"></div>
-                    <div class="mil-banner-content">
-                        <div class="mil-mb-90">
-                            <h1 class="mil-light mil-upper mil-up mil-mb-30"><span class="mil-accent">PZone</span></h1>
-                        </div>
-                    </div>
-                </div>
-            </section>
 
             <!-- portfolio -->
             <div class="mil-illustration-slider-frame mil-up">
